<resources>
    <string name="app_name">MenuSensores_gl</string>
    <string name="view_example">Ver Ejemplo</string>
    <string name="backView">volver</string>
    <string name="title">Titulo</string>
    <string name="description">Descripción</string>
    <string name="name">Nombres y Apelidos</string>
    <string name="level">Ciclo</string>
    <string name="date">01/01/2001</string>

    <string name="action_settings">Settings</string>
    <string name="toast_no_accel_error">No accelerometers available</string>
    <string name="initial_value_text">0</string>
    <string name="sensor_name_label">Accelerometer</string>
    <string name="rate_label">rate</string>
    <string name="accuracy_label">accuracy</string>
    <string name="x_label">Gráfica de X</string>
    <string name="y_label">Gráfica de Y</string>
    <string name="z_label">Gráfica de Z</string>


    <string name="play_name">Venom</string>
    <string name="play_description">Venom es considerado uno de los villanos más peligrosos y despiadados del universo Marvel, además de ser uno de los principales enemigos de Spider-Man.</string>
    <string name="play_price">$1.30</string>
    <string name="purchase">Comprar</string>
    <string name="purchase_done">Compra realizada con exito.</string>




</resources>
