<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="20dp"
    android:background="@drawable/item2_">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Acelerómetro"
        android:textAlignment="center"
        android:textSize="30dp"
        android:textStyle="bold"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin"
        android:text="@string/x_label"
        android:textSize="@dimen/small_text_size" />


    <com.example.menusensores_gl.accelerometer.GraphView
        android:id="@+id/x_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin"
        android:text="@string/y_label"
        android:textSize="@dimen/small_text_size" />

    <com.example.menusensores_gl.accelerometer.GraphView
        android:id="@+id/y_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin"
        android:text="@string/z_label"
        android:textSize="@dimen/small_text_size" />

    <com.example.menusensores_gl.accelerometer.GraphView
        android:id="@+id/z_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>